services/template-service/templates_storage/maestro-curated/event-sourcing-saas/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eventsourcing
  labels:
    name: eventsourcing
